[package]
name = "rainway_bootstrapper"
version = "0.1.0"
authors = ["Andrew Sampson <andrew@rainway.com>"]
edition = "2018"
build = "build.rs"

[package.rainway]
release_url = "https://releases.rainway.com/Installer_current.json"
downloaded_format = "https://releases.rainway.com/{}_{}.exe"
media_pack_url = "https://www.microsoft.com/en-us/software-download/mediafeaturepack"

[package.metadata.winres]
ProductName = "Rainway Bootstrapper"
OriginalFilename = "rainway_bootstrapper.exe"
FileDescription = "Rainway Bootstrapper"
LegalCopyright = "Copyright © 2019"

[build-dependencies]
winres = "0.1"

[dependencies]
sysinfo = "0.9.2"
sha2 = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.11.0"
reqwest = "0.9.19"
winreg = "0.6"
regex = "1"
winres = "0.1.11"
widestring = "0.4.0"
winapi = { version = "0.3.8", features = ["winuser", "combaseapi", "objbase", "shellapi"] }
user32-sys = "0.2.0"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
panic = 'abort'