[package]
name = "rainway_bootstrapper"
version = "0.1.0"
authors = ["Andrew Sampson <andrew@rainway.com>"]
edition = "2018"
build = "build.rs"

[package.rainway]
release_url = "http://local.vg:8080/Releases.toml"
media_pack_url = "https://www.microsoft.com/en-us/software-download/mediafeaturepack"
sentry_dns = "https://f3f4e8ff17b04538bffd1e8794e1dc05@sentry.io/1548204"
service_name = "RainwayRadar"

[package.metadata.winres]
ProductName = "Rainway Bootstrapper"
OriginalFilename = "rainway_bootstrapper.exe"
FileDescription = "Rainway Bootstrapper"
LegalCopyright = "Copyright © 2019"

[build-dependencies]
winres = "0.1"

[dependencies]
windows-service = "0.2.0"
zip = "0.5"
fs_extra = { git = "https://github.com/webdesus/fs_extra.git" }
version-compare = "0.0.9"
web-view = "0.4.1"
toml = "0.5.3"
sysinfo = "0.9.2"
sha2 = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.9.19"
winreg = "0.6"
regex = "1"
widestring = "0.4.0"
winapi = { version = "0.3.8", features = ["winuser", "combaseapi", "objbase", "shellapi", "shellscalingapi"] }
sentry = { version = "0.12.0", features = ["with_device_info", "with_panic", "with_rust_info"] } 
rust-embed = "5.1.0"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
panic = 'abort'