[package]
name = "bootstrapper"
version = "0.1.0"
authors = ["Andrew Sampson <andrew@rainway.io>"]
edition = "2018"

[package.rainway]
media_pack_url = "https://www.microsoft.com/en-us/software-download/mediafeaturepack"
sentry_dns = "https://f3f4e8ff17b04538bffd1e8794e1dc05@sentry.io/1548204"
service_name = "RainwayRadar"

[build-dependencies]
winres = "0.1"

[dependencies]
web-view = "0.4.1"
sysinfo = "0.9.2"
widestring = "0.4.0"
quiche = { path = "../quiche" }
rust-embed = "5.1.0"
sentry = { version = "0.12.0", features = ["with_device_info", "with_panic", "with_rust_info"] } 
winapi = { version = "0.3.8", features = ["winuser", "combaseapi", "objbase", "shellapi", "shellscalingapi"] }