[package]
name = "bootstrapper"
version = "1.0.0"
authors = ["Andrew Sampson <andrew@rainway.io>"]
edition = "2018"

[package.metadata.winres]
OriginalFilename = "bootstrapper.exe"
LegalCopyright = "Copyright © 2019"
FileDescription = "Rainway Bootstrapper"
ProductName = "Rainway Bootstrapper"

[package.rainway]
dotnet_framework_url = "https://dotnet.microsoft.com/download/thank-you/net472"
media_pack_url = "https://www.microsoft.com/en-us/software-download/mediafeaturepack"
sentry_dns = "https://f3f4e8ff17b04538bffd1e8794e1dc05@sentry.io/1548204"
service_name = "RainwayRadar"

[build-dependencies]
winres = "0.1"

[dependencies]
#web-view = { path = "E:/Dev/Rainway/web-view" }
web-view = { git = "https://github.com/RainwayApp/web-view.git" }
quiche = { path = "../quiche" }
rust-embed = "5.1.0"
sentry = { version = "0.12.0", features = ["with_device_info", "with_panic", "with_rust_info", "with_backtrace"] } 
winapi = { version = "0.3.8", features = ["winuser", "combaseapi", "objbase", "shellapi"] }
log = "0.4.8"
fern = { version = "0.5.8", features = ["colored"] }