[package]
name = "cli"
version = "0.1.0"
authors = ["Andrew Sampson <andrew@rainway.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = { path = "../quiche" }
clap = "2.33.0"
indicatif = "0.12.0"
console = "0.9.0"