[package]
name = "cli"
version = "0.1.0"
authors = ["Andrew Sampson <andrew@rainway.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = { path = "../quiche" }
clap = "2.33.0"
log = "0.4.8"
fern = { version = "0.5.8", features = ["colored"] }