[package]
name = "quiche"
version = "0.1.0"
authors = ["Andrew Sampson <andrew@rainway.io>"]
edition = "2018"
build = "build.rs"

[quiche]
base_release_url = "https://releases.rainway.com/quiche"
release_path = "/Releases.toml"

[dependencies]
windows-service = "0.2.0"
zip = "0.5"
fs_extra = { git = "https://github.com/webdesus/fs_extra.git" }
toml = "0.5.3"
sha2 = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.9.19"
winreg = "0.6"
regex = "1"
log = "0.4.8"
fern = "0.5.8"