[package]
name = "quiche"
version = "1.0.0"
authors = ["Andrew Sampson <andrew@rainway.io>"]
edition = "2018"
build = "build.rs"

[quiche]
base_release_url = "https://releases.rainway.com/quiche"
release_path = "/Releases.toml"
uninstall_key = "{E312ACD2-6504-4A9E-A968-B12F0242385D}" # our AI product code

[dependencies]
walkdir = "2"
windows-service = "0.2.0"
zip = "0.5"
toml = "0.5.3"
sha2 = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.9.19"
winreg = "0.6"
regex = "1"
log = "0.4.8"
fern = "0.5.8"
winapi = { version = "0.3.8", features = ["winuser", "tlhelp32", "handleapi", "restartmanager"] }