[package]
name = "quiche"
version = "1.0.0"
authors = ["Andrew Sampson <andrew@rainway.io>"]
edition = "2018"
build = "build.rs"

[quiche]
base_release_url = "https://releases.rainway.com/quiche"
release_path = "/Releases.toml"
uninstall_key = "{E312ACD2-6504-4A9E-A968-B12F0242385D}" # our AI product code
rainway_key = "Software\\Rainway"
install_endpoint = "https://api-dev.rainway.com/v2/installer/track/installed"
update_endpoint = "https://api-dev.rainway.com/v2/installer/track/updated"
activate_endpoint = "https://api-dev.rainway.com/v2/installer/track/activated"
# deactivate_endpoint = "https://api-dev.rainway.com/v2/installer/track/deactivated"
api_origin = "https://download.rainway.com"


[dependencies]
walkdir = "2.3.1"
windows-service = "0.2.0"
zip = "0.5.5"
toml = "0.5.6"
sha2 = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
hyper = "0.13"
hyper-tls = "0.4.1"
winreg = "0.7.0"
regex = "1"
log = "0.4.8"
fern = "0.6.0"
tokio = { version =  "0.2.14", features = ["fs"] }
winapi = { version = "0.3.8", features = ["winuser", "tlhelp32", "handleapi", "restartmanager"] }